--- a/crates/client/Cargo.toml
+++ b/crates/client/Cargo.toml
@@ -62,6 +62,9 @@ serde-config = ["serde"]
 # enables experimental the mDNS (multicast) feature
 mdns = ["trust-dns-proto/mdns"]
 
+default = ["trust-dns-proto/default", "tokio"]
+wasm-bindgen = ["trust-dns-proto/wasm-bindgen"]
+
 [lib]
 name = "trust_dns_client"
 path = "src/lib.rs"
@@ -81,8 +84,8 @@ ring = { version = "0.16", optional = true, features = ["std"]}
 rustls = { version = "0.19", optional = true }
 serde = { version = "1.0", features = ["derive"], optional = true }
 thiserror = "1.0.20"
-tokio = { version = "1.0", features = ["rt"] }
-trust-dns-proto = { version = "0.21.0-alpha.1", path = "../proto"}
+tokio = { version = "1.0", features = ["rt"], optional = true }
+trust-dns-proto = { version = "0.21.0-alpha.1", path = "../proto", default-features = false }
 webpki = { version = "0.21", optional = true }
 
 [dev-dependencies]
